# rtsp-human-capture

./: README.md  config.cfg  config.py  display_manager.py  main.py  multi_stream_manager.py  person_detector.py  pyproject.toml  stream_processor.py
docs/: .atlas-analysis.json  docs.json  index.mdx  installation.mdx  introduction.mdx  quickstart.mdx
docs/api/: cli-commands.mdx  configuration.mdx  person-detector.mdx  stream-processor.mdx
docs/examples/: image-mode.mdx  test-image.mdx  video-mode.mdx
docs/guides/: configuration.mdx  gpu-acceleration.mdx  model-setup.mdx  multi-stream.mdx  single-stream.mdx
