[project]
name = "rtsp-human-capture"
author = "itsyourap"
url = "http://github.com/itsyourap/rtsp-human-capture"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
    "opencv-contrib-python",
]

[tool.uv.sources]
opencv-contrib-python = { path = "deps/opencv_contrib_python-4.13.0.90-cp37-abi3-win_amd64.whl" }
